# rouge

./: .coderabbit.yaml  .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODING_STANDARDS.md  LICENSE  README.md  manual_migration_003.sql  pyproject.toml  yoyo.ini
.claude/: settings.local.json
.github/: coderabbit.yaml
ai_docs/: conventional-commits.md
app/: .env.example  README.md  pyproject.toml
docs/: ARTIFACT_POLICY.md
migrations/: 001_initial_schema.py  002_add_adw_id_to_comments.py  003_add_patches_table.py  004_add_executor_xwing_workers.py  005_refactor_patches_to_issues.py  006_remove_lock_rpc.py  007_allow_null_adw_id.py  008_restore_lock_rpc.py  009_lock_issue_sets_started.py  010_align_issue_statuses_with_worker.py  011_add_codereview_issue_type.py  012_assigned_to_free_text.py  013_add_adw_id_to_lock_rpc.py  014_remove_codereview_type.py  015_remove_main_type.py  016_add_thin_type.py  017_add_claimed_status.py  017_add_direct_type.py  README.md
supabase/: config.toml  seed.sql
tests/: conftest.py  test_acceptance_step.py  test_adw.py  test_agent.py  test_agents_base.py  test_agents_claude.py  test_agents_opencode.py  test_agents_registry.py  test_artifacts.py  test_attachment_note_helpers.py  test_build_patch_plan_step.py  test_builtin_workflow_parity.py  test_classify_step.py  test_claude_code_plan_step.py  test_cli.py  test_cli_artifact.py  test_cli_comment.py  test_cli_db.py  test_cli_issue.py  test_cli_mr.py  test_cli_step.py  test_cli_workflow.py  test_code_quality_step.py  test_code_review_cli.py  test_code_review_step.py  (+45 more)
(+329 files in other folders)
